# epis

./: .dockerignore  .env.example  .gitignore  Cargo.toml  ISSUES.md  README.md  docker-compose.yml  rustfmt.toml
epis/: .env.example  Cargo.toml  docker-compose.yml
epis-cli/: .env.example  Cargo.toml
epis-cli/src/: config.rs  main.rs
epis-cli/src/lingoo/: api.rs  lingoo.rs  mod.rs  utils.rs
epis-cli/src/lingoo/commands/chat/: chat.rs  mod.rs
epis-cli/src/lingoo/commands/chat/commands/: mod.rs  models.rs  new_chat.rs  rename_chat.rs  resume_chat.rs  utils.rs
epis-tts/: Cargo.toml
epis-tts/src/: byt5_ttp.rs  kokoro_tts.rs  lib.rs  models.rs  ttp.rs  tts.rs
epis-tts/src/kokoro/: create_vocab.rs  mod.rs
epis/.sqlx/: query-1ac6284f99ed9bc7b0c583479ef376dccedbacb96595c1f8d05c6608a42fd066.json  query-1d982e2211ee598eac0e040494b35da772dcc465329f3ead9d6ec550d77112d1.json  query-23a88cb42586fea97cf0f841a22c268f05346ab3efd17ad66591941041034c4b.json  query-2bb0fd4d3acdcc8926733d2fbb155f34d1dc9981648679188e528db4cfb534e7.json  query-2d29cf2a3f910d1c081109b6b5e534cec6803fcd3c7a9a29600aec4e947eac6c.json  query-3516d153d6da3f3dc8b989835a1b35fcf9678e46f80dbb1c6c484a574c4a0d90.json  query-3ea0d9f45be31e7b752bc3a2bb8c9c0afd481603a6bbd40ab9dcb01ff9302c2f.json  query-531f81c21d55806fdc3a6bbc4238e21a8d2629f3ad111b4bc9f06065839ae4ed.json  query-739aec11d95cb447057f2352454ed82a02ec562c1e4b25f246ca49bc7fff79a3.json  query-7553ac0277cc9b215826f41041400da1ee2ef486128db0541d38e14b4c98e449.json  query-777ea21af04b7ac557a82771c76e7b44adf6f77538e0e8ab421b80d4e10ae5eb.json  query-80afc28e4cf9a4ac938a6344e532519d380e3e8c494715a78c38d0cd2c3bac06.json  query-91df1a86e5618552afed9565e8f4bd836f24ee291ba21869eafc387b5fe27917.json  query-95d05bb188f0aa92ca5eb69f6c62f52a46cbb5e8e8d9f306d32ba84d0a58e2ac.json  query-a21cbb539948a486cb8c160ad36857d3ab0ca9f40be5881799d280a8203ac111.json  query-ac3171074dd821971088247c7bdb352bbf258d47c9ab407ade495721a6c9c2c5.json  query-bb6fdb7ac6b12aa2785ddce3051f01514e817f89e44539f65ffcf3e027690427.json  query-cc1dfbc1a7af0b56082bb033a46e12959392a397165e8bdc6350f104cf22866a.json  query-dd462b43b1f95b80d79a914679e10527d7d1ab905d8b8f091f095ab4287946f0.json  query-f2a38aa2b4781301117a1787c876f1e5a3ae1087b49f77af5daba629f09d6591.json
epis/migrations/: 20250814114147_add_conversation_table.down.sql  20250815134237_init.down.sql  20250815134237_init.up.sql  20250902112514_add_lingoo_rag_table.down.sql  20250902112514_add_lingoo_rag_table.up.sql  20251109091846_add_user_id_col_to_conversation_table.down.sql  20251109091846_add_user_id_col_to_conversation_table.up.sql  20251115140749_add_learned_vocab_table.down.sql  20251115140749_add_learned_vocab_table.up.sql  20251201095405_add_chatmate_table.down.sql  20251201095405_add_chatmate_table.up.sql
epis/src/: config.rs  lib.rs  main.rs  postgres.rs
epis/src/ai/: llm.rs  mod.rs  router.rs
epis/src/ai/handlers/: generate_title.rs  mod.rs
epis/src/ai/ollama/: mod.rs  ollama.rs  ollama_models.rs
epis/src/conversation/: adapters.rs  models.rs  repository.rs  router.rs
epis/src/conversation/handlers/: mod.rs  set_conversation_title.rs
epis/src/domain/: epis.rs  mod.rs  models.rs  ports.rs  realtime_ai_agent.rs
epis/src/entities/: common.rs  embedding.rs
epis/src/http/: server.rs
epis/src/inbound/: auth_layer.rs  http.rs  mod.rs  websocket.rs  ws_auth_layer.rs
epis/src/inbound/rest/: epis.rs  mod.rs
epis/src/inbound/rest/epis/: handlers.rs
epis/src/inbound/rest/epis/handlers/: handshake_chatmate.rs  (+1 more)
epis/src/inbound/routers/: epis.rs
epis/src/inbound/ws/: epis.rs  mod.rs
epis/src/inbound/ws/epis/: handlers.rs
epis/src/lingoo/: adapters.rs  lingoo.rs  mod.rs  models.rs  rag.rs  repository.rs  router.rs
epis/src/lingoo/handlers/: chat.rs  create_conversation.rs  list_conversations.rs  mod.rs
epis/src/lingoo/handlers/ws/: mod.rs  voice_chat.rs
epis/src/openai/: adapter.rs  adapters.rs
epis/src/openai/adapters/: openai_llm.rs  openai_transcription.rs  openai_tts.rs
epis/src/outbound/: clerk.rs  mod.rs  openai.rs  postgres.rs
epis/src/providers/ollama/: mod.rs  ollama.rs
epis/src/rag/: mod.rs  models.rs  rag.rs
(+102 files in other folders)
