[package]
name = "epis"
version = "0.1.0"
edition = "2025"
authors = ["Mohammad Kermani <mkermani144@gmail.com>"]
description = "An extensible assistant helping you learn anything"
repository = "https://github.com/mkermani144/epis"
keywords = ["ai", "learning"]

[dependencies]
anyhow = "1.0.98"
inquire = "0.7.5"
ollama-rs = "0.3.2"
schemars = "1.0.4"
serde = "1.0.219"
serde_json = "1.0.142"
tokio = { version = "1.0", features = ["full"] }
