[package]
name = "epis"
version = "0.1.0"
edition = "2024"
authors = ["Mohammad Kermani <mkermani144@gmail.com>"]
description = "An extensible assistant helping you learn anything"
repository = "https://github.com/mkermani144/epis"
keywords = ["ai", "learning"]

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.3"
inquire = "0.7.5"
log = "0.4.20"
nutype = "0.6.2"
ollama-rs = "0.3.2"
schemars = "1.0.4"
serde = "1.0.219"
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.0", features = ["full"] }
