[package]
name = "epis-cli"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
colored = "3.0.0"
derive_more = { version = "2.0.1", features = ["display"] }
dotenvy = "0.15.7"
epis = { path = "../epis", features = ["types"] }
inquire = "0.7.5"
reqwest = "0.12.23"
tokio = "1.47.1"
