[package]
name = "epis-tts"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = ["display"] }
epis-core = { path = "../epis-core" }
hound = "3.5.1"
rten = { version = "0.22.1", features = ["random"] }
rten-generate = "0.22.1"
rten-tensor = "0.22.1"
thiserror = "2.0.16"
whatlang = "0.18.0"

[lints]
workspace = true
